# rust-singleton-process

./: Cargo.toml
src/: lib.rs
