[package]
name = 'singleton-process'
version = '0.1.3'
edition = '2024'
rust-version = '1.85.0'
description = 'Ensure only a single process actively running with an associated name.'
readme = 'README.md'
repository = 'https://github.com/CrendKing/rust-singleton-process'
license-file = 'LICENSE'
keywords = ['singleton', 'single', 'process']
categories = ['development-tools']

[dependencies]
thiserror = '2.0'

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = '0.62', features = [
    'Win32_Foundation',
    'Win32_Security',
    'Win32_System_Memory',
    'Win32_System_Threading',
] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
nix = { version = '0.30', features = ['fs', 'signal'] }

[dev-dependencies]
function_name = '0.3'
sysinfo = { version = '0.35', default-features = false, features = ['system'] }
